--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.31"
+async-openai = "0.14.3"
+async-trait = "0.1.74"
+chrono = { version = "0.4.31", features = ["serde"] }
 clap = { version = "4.4.5", features = ["derive"] }
 graphql_client = "0.13.0"
 inquire = "0.6.2"
+openai-func-enums = "0.1.2"
 reqwest = { version = "0.11.20", features = ["json"] }
 serde = "1.0.188"
+serde_json = "1.0.107"
+tiktoken-rs = "0.5.6"
 tokio = { version = "1.32.0", features = ["full"] }
-uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
+uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
