--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-openai = "0.14.3"
+async-openai = "0.12.1"
 async-trait = "0.1.74"
 chrono = { version = "0.4.31", features = ["serde"] }
-clap = { version = "4.4.5", features = ["derive"] }
+clap = { version = "4.4.7", features = ["derive"] }
+dotenv = "0.15.0"
 graphql_client = "0.13.0"
 inquire = "0.6.2"
 openai-func-enums = "0.1.2"
-reqwest = { version = "0.11.20", features = ["json"] }
-serde = "1.0.188"
+reqwest = { version = "0.11.22", features = ["json"] }
+serde = "1.0.190"
 serde_json = "1.0.107"
-tiktoken-rs = "0.5.6"
-tokio = { version = "1.32.0", features = ["full"] }
-uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
+tiktoken-rs = "0.4.2"
+tokio = { version = "1.33.0", features = ["full"] }
+uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
